kubernetes/base/argo/ingressroute.yaml
# argo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argo.mythbound.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
